--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "7.0.96",
+    "@mdi/js": "^7.4.47",
     "build": "^0.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
